@@ -141,3 +141,5 @@
 	* Cleaned up cart picking in rdlogeditb(1).
 2017-02-21 Fred Gleason <fredg@paravelsystems.com>
 	* Got log saves working in rdlogeditb(1).
+2017-02-21 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented the 'Insert Cart' button in rdlogeditb(1).
